--- a/src/main/resources/templates/clientInfo.html
+++ b/src/main/resources/templates/clientInfo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -15,15 +15,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-<table>
-    <table class="table table-striped table-dark">
-        <tbody>
-        <thead>
-        <tr th:each="clientList : ${clientList}"
-            <td th:scope="col" th:text="${clientList.getBankAccount()}"></td>
-        </tbody>
-    </table>
-</body>
-</html>
+
+<p th:text="'Result: ' + ${client.getAmount()} + '!'" />
 </body>
 </html>
