--- a/src/main/resources/templates/clients.html
+++ b/src/main/resources/templates/clients.html
@@ -9,10 +9,11 @@
 </head>
 <body>
 <table>
-<table class="table table-striped table-dark">
+<table class="table" width = "250">
     <tbody>
     <thead>
-    <tr th:each="clientList : ${clientList}" th:onclick="'window.location.href = \'' +
+    <tr th:each="clientList : ${clientList}"
+        th:onclick="'window.location.href = \'' +
         @{/clients/{id}(id=${clientList.getId()})} + '\''">
         <td th:text="${clientList.getId()}" th:scope="col"></td>
         <td th:scope="col" th:text="${clientList.getName()}"></td>
