--- a/src/main/resources/templates/clientInfo.html
+++ b/src/main/resources/templates/clientInfo.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
-<body>
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
 </head>
 <body>
 
-<p th:text="'Result: ' + ${client.getAmount()} + '!'" />
+    <p th:text="'На рахунку клієнта: ' + ${client.bankAccounts.getAmount()} + '!'" />
+
 </body>
 </html>
