--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js}"></script>
     <script th:src="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
-                                                                                                 <title>Transactions</title>
-                                                                                                                      <style>
+    <title>Transactions</title>
+    <style>
+        tbody tr:hover{
+            cursor: pointer;
+            background-color: #F5F5DC;
+        }
         tr-grid{
             margin-top: 20%;
         }
