Client adding feature(need to err logs)

--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -44,7 +44,7 @@
 
             <div id = "tr-grid">
                 <h4>Transactions</h4>
-                <form action="/searchByName"  method="get" style="display: inline-block">
+                <form action="/searchByTransaction"  method="get" style="display: inline-block">
                     <input placeholder="search by name" type="text" id = "searchText" name="name"/>
                     <button type="submit" class="btn btn-default btn-lg btn-block" id="search" style="width: 150px">Search</button>
                 </form>
