--- a/src/main/resources/templates/successRegister.html
+++ b/src/main/resources/templates/successRegister.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js}"></script>
     <script th:src="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
-    <title>Error</title>
+    <title>Success register</title>
 </head>
 <body>
-    <div class="container" style="text-align: center; width: 400px;">
-        <h3>No much login or password</h3>
+    <div class="container">
+        <h3 style="text-align: center">Success</h3>
+        <a href="/welcomePage"><button class="btn btn-default btn-lg btn-block">Return to login page</button></a>
 
-        <a href="/login"><button class="btn btn-default btn-lg btn-block">Return to login page</button></a>
     </div>
 </body>
 </html>
