Cascade for caed added.

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -51,7 +51,7 @@
                         window.location = "/successRegister";
                     }
                     else{
-                        window.location = "/error";
+                        window.location = "/errorRegister";
 
                     }
                 }
