--- a/src/main/resources/templates/clientInfo.html
+++ b/src/main/resources/templates/clientInfo.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
 </head>
 <body>
 
-    <p th:text="'На рахунку клієнта: ' + ${client.bankAccounts.getAmount()} + '!'" />
+    <p id="one" th:text="'На рахунках клієнта: ' + ${client} + '!'" />
 
+    <!--/*@thymesVar id="client" type="com.banks.entities.AmountDTO"*/-->
+    <form action="#" th:action="@{/amountForm}" th:object="${amount}" method="post">
+        <div class="form-group">
+            <p>Новий рахунок:
+                <input style="width: 400px" class="form-control" type="number" th:field="*{am}"/></p>
+            <p><input class="btn btn-primary" type="submit" value="Submit" /></p>
+        </div>
+    </form>
 </body>
 </html>
