--- a/src/main/resources/templates/clients.html
+++ b/src/main/resources/templates/clients.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+          crossorigin="anonymous">
 </head>
-<body>
-<table class="table" width = "250">
-    <tr th:each="clientList : ${clientList}"
-        th:onclick="'window.location.href = \'' +
-        @{/clients/{id}(id=${clientList.getId()})} + '\''">
-        <td th:text="${clientList.getId()}" th:scope="col"></td>
-        <td th:scope="col" th:text="${clientList.getName()}"></td>
-        <td th:scope="col" th:text="${clientList.getAddress()}"></td>
-        <td th:scope="col" th:text="${clientList.getAge()}"></td>
-    </tr>
-</table>
+<body background="black">
+<table class="table table-hover table-dark" style="margin: auto">
+    <thead style="width: 1000px">
+    <tr>
+        <th scope="col">Ім'я</th>
+        <th scope="col">Адреса</th>
+        <th scope="col">Вік</th>
+    </thead >
+    <tbody style="width: 1000px">
+        <tr th:each="clientList : ${clientList}"
+            th:onclick="'window.location.href = \'' +
+            @{/clients/{id}(id=${clientList.getId()})} + '\''">
+            <td th:scope="col" th:text="${clientList.getName()}"></td>
+            <td th:scope="col" th:text="${clientList.getAddress()}"></td>
+            <td th:scope="col" th:text="${clientList.getAge()}"></td>
+        </tr>
+    </tbody>
 
+</table>
 
 <a th:href= "@{'formClient'}" class="btn btn-success">
     <i class="fa fa-arrow-circle-o-left"></i>&nbsp;Новий клієнт</a>
