--- a/src/main/resources/templates/clients.html
+++ b/src/main/resources/templates/clients.html
@@ -23,9 +23,9 @@
             <td th:scope="col" th:text="${clientList.getName()}"></td>
             <td th:scope="col" th:text="${clientList.getAddress()}"></td>
             <td th:scope="col" th:text="${clientList.getAge()}"></td>
+            <td th:scope="col" th:text="${clientList.getSum()}"></td>
         </tr>
     </tbody>
-
 </table>
 
 <a th:href= "@{'formClient'}" class="btn btn-success">
