amount on all accounts

--- a/src/main/resources/templates/clients.html
+++ b/src/main/resources/templates/clients.html
@@ -15,6 +15,7 @@
         <th scope="col">Ім'я</th>
         <th scope="col">Адреса</th>
         <th scope="col">Вік</th>
+        <th scope="col">Сума</th>
     </thead >
     <tbody style="width: 1000px">
         <tr th:each="clientList : ${clientList}"
